# sdr-pdu

./: AGENTS.md  Cargo.toml  Makefile  README.md  TODO.md  concepts.md  send_test_frame.py  spino.sh
.github/workflows/: ci.yml
agent_docs/: architecture.md  conventions.md  dsp_implementation.md  hardware_iio.md  testing_guidelines.md
hackrf-pdu-tx/: AGENTS.md  Cargo.toml  README.md
hackrf-pdu-tx/agent_docs/: conventions.md
hackrf-pdu-tx/src/: hackrf.rs  kiss_server.rs  main.rs  modulator.rs  nco.rs
js-client/: README.md  index.js  package.json
pdu-proxy/: AGENTS.md  Cargo.toml  README.md
pdu-proxy/agent_docs/: architecture.md  conventions.md
pdu-proxy/src/: main.rs
pluto-pdu-tx/: AGENTS.md  Cargo.toml  Makefile  README.md  scan_and_send.py  send_test_frame.py
pluto-pdu-tx/agent_docs/: conventions.md  hardware_iio.md
pluto-pdu-tx/src/: cat.rs  kiss.rs  main.rs  modulator.rs  nco.rs  pluto.rs
sdr-pdu-utils/: Cargo.toml  README.md
sdr-pdu-utils/src/: cat.rs  kiss.rs  kiss_server.rs  kiss_ws_server.rs  lib.rs  utils.rs
src/: cat.rs  engine.rs  kiss.rs  main.rs  modulator.rs  nco.rs  pluto.rs
