[workspace]

members = [
    "pluto-pdu-tx",
    "hackrf-pdu-tx",
    "sdr-pdu-utils",
    "pdu-proxy",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
futures = "0.3.32"
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tokio-tungstenite = "0.26.1"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"

[profile.release]
codegen-units = 1
debug = true
lto = "fat"
opt-level = 3

