[package]
name = "hackrf-tx-2fsk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bytes = "1.11.1"
clap = { version = "4.6.0", features = ["derive"] }
crossbeam = "0.8.4"
futures = "0.3.32"
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
waverave-hackrf = "0.1.2"
