[package]
name = "hackrf-pdu-tx"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
crossbeam = "0.8.4"
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
waverave-hackrf = "0.1.2"
sdr-pdu-utils = { path = "../sdr-pdu-utils" }
