[package]
name = "pdu-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
sdr-pdu-utils = { path = "../sdr-pdu-utils" }
anyhow = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
axum = { version = "0.7", features = ["ws"] }
tower-http = { version = "0.6", features = ["fs"] }
