[package]
name = "pluto-pdu-tx"
version = "0.1.0"
edition = "2024"
authors = ["F4JXQ <loic@fejoz.net>"]
description = "PlutoSDR 2FSK Gateway with KISS and CAT (rigctld) support."

[dependencies]
tokio = { workspace = true }
tokio-util = { workspace = true }
bytes = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures = { workspace = true }
num-complex = "0.4"
industrial-io = "0.6.1"
clap = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
sdr-pdu-utils = { path = "../sdr-pdu-utils" }
# libiio and libad9361 bindings will be needed later, 
# but for unit tests of KISS/CAT/NCO we can start without them or with stubs.


# This will be forced by the CI/CD. See Makefile
# [profile.release]
# panic = "abort"

